--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@
     min-width: 35%;
     max-width: 40%;
     padding: 1rem auto;
-    vertical-align: center;
+    vertical-align: middle;
     align-items: center;
     justify-content: center;
     transition-duration: 0.3s;
