--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,17 @@
   }
 
   .submit-button {
+    display: flex;
+    min-height: 100px;
+    max-height: 300px;
+    min-width: 35%;
+    max-width: 40%;
+    padding: .25rem auto;
+    margin-left: auto;
+    margin-right: auto;
+    vertical-align: middle;
+    align-items: center;
+    justify-content: center;
     letter-spacing: 1px;
     text-transform: uppercase;
     text-decoration: none;
@@ -58,17 +69,11 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     white-space: nowrap;
     border: 2px solid black;
-    margin: 0rem 20px 2rem 5px;
-    min-height: 60px;
-    max-height: 300px;
-    min-width: 95%;
-    max-width: 10000px;
     color: white;
     background-color: blue;;
     border-radius: 7.5px;
     text-align: center;
     font-size: 1.2rem;
-    padding: 8px 50px;
   }
 
   .email-input {
@@ -437,13 +442,15 @@
   }
 
   .contact-button {
-    display: inline-block;
-    position: relative;
-    min-height: 30px;
-    max-height: 35px;
-    min-width: 5%;
-    max-width: 50%;
-    padding: 8px auto;
+    display: flex;
+    min-height: 100px;
+    max-height: 300px;
+    min-width: 35%;
+    max-width: 40%;
+    padding: .25rem auto;
+    margin-left: auto;
+    margin-right: auto;
+    vertical-align: middle;
     align-items: center;
     justify-content: center;
     transition-duration: 0.3s;
