--- a/styles.css
+++ b/styles.css
@@ -50,11 +50,11 @@
 
   .submit-button {
     display: flex;
-    min-height: 100px;
-    max-height: 300px;
-    min-width: 35%;
-    max-width: 40%;
-    padding: .25rem auto;
+    min-height: 80px;
+    max-height: 90px;
+    min-width: 75%;
+    max-width: 80%;
+    padding: 1rem 0;
     margin-left: auto;
     margin-right: auto;
     vertical-align: middle;
