--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@
     padding: 1rem 0;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 1.5rem;
     vertical-align: middle;
     align-items: center;
     justify-content: center;
