--- a/styles.css
+++ b/styles.css
@@ -463,15 +463,10 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     white-space: nowrap;
     border: 2px solid black;
-    margin: 20px 20px 20px 5px;
-    min-height: 80px;
-    max-height: 100px;
-    min-width: 100px;
-    max-width: 200px;
     color: white;
-    background-color: blue;;
-    border-radius: 7.5px;
+    background-color: blue;
     text-align: center;
+    border-radius: 7.5px;
     font-size: 1.2rem;
   }
 
