--- a/styles.css
+++ b/styles.css
@@ -476,6 +476,34 @@
     transform: translateY(-5px);
   }
 
+  .about-button {
+    display: flex;
+    min-height: 80px;
+    max-height: 90px;
+    min-width: 35%;
+    max-width: 40%;
+    padding: .25rem auto;
+    margin-left: 3rem;
+    margin-right: auto;
+    vertical-align: middle;
+    align-items: center;
+    justify-content: center;
+    transition-duration: 0.3s;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-decoration: none;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    font-weight: 700;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    white-space: nowrap;
+    border: 2px solid black;
+    color: white;
+    background-color: blue;
+    text-align: center;
+    border-radius: 7.5px;
+    font-size: 1.2rem;
+  }
+
   .abouts {
     margin: 10px;
   }
