--- a/styles.css
+++ b/styles.css
@@ -252,6 +252,10 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 
+  main {
+    min-width: 100%;
+  }
+
   #about11 {
     font-weight: normal;
     font-size: 1.2rem;
