--- a/styles.css
+++ b/styles.css
@@ -257,6 +257,10 @@
     padding: 0;
   }
 
+  body, head {
+    display: block;
+  }
+
   #about11 {
     font-weight: normal;
     font-size: 1.2rem;
