--- a/styles.css
+++ b/styles.css
@@ -103,9 +103,9 @@
     background: rgba(65, 109, 243, 0.305);
   }
 
-  #nav {
+  /*#nav {
     position: fixed
-  }
+  }*/
 
   section {
     display: block;
@@ -552,6 +552,7 @@
     padding-inline-start: 0;
     margin-block: 0;
     height: 100%;
+    position: fixed
   }
   
   nav > ul > li {
