--- a/styles.css
+++ b/styles.css
@@ -544,22 +544,30 @@
     height: 50px;
   }
   
-  nav > ul {
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    align-items: center;
-    padding-inline-start: 0;
-    margin-block: 0;
-    height: 100%;
+  #nav {
+    width: 100%;
+    height: 3rem;
+    top: 0px;
+    left: 0px;
     position: fixed
+  }
+
+  nav > ul {
+    padding:0;
+    margin:0;
   }
   
   nav > ul > li {
-    color: #dfdfe2;
-    margin: 0 0.2rem;
-    padding: 0.2rem;
-    display: block;
+    float:left;
+    min-width:50px;
+    background:#CCC;
+    list-style:none;
+    vertical-align:middle;
+    padding:15px;
+  }
+
+  li, nav > ul > a {
+    color: #000;
   }
   
   nav > ul > li:hover {
