--- a/styles.css
+++ b/styles.css
@@ -555,12 +555,13 @@
   nav > ul {
     padding:0;
     margin:0;
+    position: fixed
   }
   
   nav > ul > li {
     float:left;
     min-width:50px;
-    background:#CCC;
+    background:rgba(65, 109, 243, 0.305);;
     list-style:none;
     vertical-align:middle;
     padding:15px;
