--- a/styles.css
+++ b/styles.css
@@ -573,8 +573,8 @@
   }
   
   nav > ul > li:hover {
-    border-radius: 5px;
-    background-color: #dfdfe2;
+    border-radius: 3px;
+    background-color: lightskyblue;
     color: #1b1b32;
     cursor: pointer;
   }
