--- a/styles.css
+++ b/styles.css
@@ -285,7 +285,7 @@
     padding: 8rem 5rem;
   }
 
-  header {
+  /*header {
     width: 100%;
     height: 75px;
     background-color: #1b1b44;
@@ -295,7 +295,7 @@
     top: 0;
     margin: 0 auto;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
+  }*/
 
   .About-mee {
     max-height: 2000px;
