--- a/styles.css
+++ b/styles.css
@@ -554,9 +554,11 @@
   }
   
   nav > ul > li {
+    text-align: center;
     float:left;
     min-width:25%;
-    background:rgba(65, 109, 243, 0.305);;
+    color: white;
+    background:black;
     list-style:none;
     vertical-align:middle;
   }
@@ -567,8 +569,8 @@
   
   nav > ul > li:hover {
     border-radius: 3px;
-    background-color: lightskyblue;
-    color: #1b1b32;
+    background-color: blue;
+    color: white;
     cursor: pointer;
   }
   
