--- a/styles.css
+++ b/styles.css
@@ -554,6 +554,8 @@
   
   nav > ul > li {
     text-align: center;
+    justify-content: center;
+    align-items: center;
     display: flex;
     float:left;
     min-width:25%;
