--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 1.0rem;
+    margin-top: 1.5rem;
     vertical-align: middle;
     align-items: center;
     justify-content: center;
