--- a/styles.css
+++ b/styles.css
@@ -397,10 +397,13 @@
 
   .p1p {
     border: 2px solid black;
+    height: 100px;
+    width: 40%;
   }
 
   .p2p {
     border: 2px solid black;
+    
   }
 
   .p3p {
