--- a/styles.css
+++ b/styles.css
@@ -403,19 +403,27 @@
 
   .p2p {
     border: 2px solid black;
+    height: 150px;
+    width: 100%;
 
   }
 
   .p3p {
     border: 2px solid black;
+    height: 150px;
+    width: 100%;
   }
 
   .p4p {
     border: 2px solid black;
+    height: 150px;
+    width: 100%;
   }
 
   .p5p {
     border: 2px solid black;
+    height: 150px;
+    width: 100%;
   }
 
   .skills {
