--- a/styles.css
+++ b/styles.css
@@ -143,6 +143,11 @@
     font-size: 1.2rem;
   }
 
+  #center {
+    text-align: center;
+    justify-content: center;
+  }
+
   #welcome-button:hover {
     transform: translateY(-5px);
   }
