--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@
     font-weight: 700;
     letter-spacing: 1px;
     margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin-bottom: 1rem;1
   }
 
   .message-input {
