--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,9 @@
     font-weight: 700;
     letter-spacing: 1px;
     margin-top: 1rem;
-    margin-bottom: 1rem;1
+    margin-bottom: 1rem;
+    display: block;
+    text-align: left;
   }
 
   .message-input {
