--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,11 @@
     text-align: left;
   }
 
+  .center {
+    text-align: center;
+    justify-content: center;
+  }
+
   .submit-button {
     display: flex;
     min-height: 60px;
@@ -404,7 +409,7 @@
     border: 2px solid black;
     height: 150px;
     width: 100%;
-    background-image: url('https://illustoon.com/photo/dl/11331.png');
+    background-image: na;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 50% 50%;
@@ -425,18 +430,30 @@
     border: 2px solid black;
     height: 150px;
     width: 100%;
+    background-image: url('https://illustoon.com/photo/dl/11331.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
   }
 
   .p4p {
     border: 2px solid black;
     height: 150px;
     width: 100%;
+    background-image: na;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
   }
 
   .p5p {
     border: 2px solid black;
     height: 150px;
     width: 100%;
+    background-image: na;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
   }
 
   .skills {
